--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "hyva-themes/magento2-klarna-osm",
-  "description": "Hyvä Themes Compatibility module for Klarna_Osm",
+  "name": "hyva-themes/magento2-klarna-kep",
+  "description": "Hyvä Themes Compatibility module for Klarna_Kep",
   "type": "magento2-module",
   "require": {
     "magento/framework": "*",
     "hyva-themes/magento2-compat-module-fallback": "*",
-    "klarna/module-osm": "*"
+    "klarna/module-kep": "*"
   },
   "authors": [{
       "name": "Hyvä Themes B.V.",
@@ -17,11 +17,7 @@
       "src/registration.php"
     ],
     "psr-4": {
-      "Hyva\\KlarnaOsm\\": "src/"
+      "Hyva\\KlarnaKep\\": "src/"
     }
-  },
-  "conflict": {
-    "hyva-themes/magento2-klarna-onsitemessaging": "*",
-    "klarna/module-onsitemessaging": "*"
   }
 }
